HPET, APIC timer and some other stuff

--- a/limine.cfg
+++ b/limine.cfg
@@ -1,11 +1,7 @@
-# Timeout in seconds that Limine will use before automatically booting.
 TIMEOUT=123456
- 
-# The entry name that will be displayed in the boot menu
+TERM_BACKGROUND=FF063DAA
+TERM_FOREGROUND=FFFFFF
+
 :FishOS
- 
-# Change the protocol line depending on the used protocol.
-PROTOCOL=stivale2
- 
-# Path to the kernel to boot. boot:/// represents the partition on which limine.cfg is located.
+PROTOCOL=limine
 KERNEL_PATH=boot:///fishos.elf
