Add basic tmpfs and basic userspace file access

--- a/userspace/test/Makefile
+++ b/userspace/test/Makefile
@@ -17,6 +17,7 @@ INTERNALCFLAGS :=           \
 	-ffreestanding          \
 	-fno-pie                \
 	-fno-pic                \
+	-fno-omit-frame-pointer \
 	-march=x86-64           \
 	-mabi=sysv              \
 	-mno-80387              \
