Add mmap (only private anon mapping) and change VMM to have more flexible mapped memory ranges

--- a/userspace/test/Makefile
+++ b/userspace/test/Makefile
@@ -18,6 +18,7 @@ INTERNALCFLAGS :=           \
 	-fno-pie                \
 	-fno-pic                \
 	-fno-omit-frame-pointer \
+	-fstack-protector       \
 	-march=x86-64           \
 	-mabi=sysv              \
 	-mno-80387              \
