Boot into jwm by default

--- a/build-support/limine.conf
+++ b/build-support/limine.conf
@@ -1,5 +1,11 @@
 timeout: no
 
+/FishOS (graphical)
+    protocol: limine
+    kernel_path: boot():/boot/fishos
+    module_path: boot():/boot/initramfs.tar
+    kernel_cmdline: startwm
+
 /FishOS
     protocol: limine
     kernel_path: boot():/boot/fishos
